--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -22,7 +22,7 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                 <span class="navbar-togger-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
