--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block titlle%}Changed{% endblock %}
+{% block title%}Changed{% endblock %}
 
 {% block content %}
         <h1>This is the home page</h1>
