--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title%}Login{% endblock %}
+{% block title%}Loginn{% endblock %}
 
 {% block content %}
 <form method="POST">
