--- a/website/templates/check_connection.html
+++ b/website/templates/check_connection.html
@@ -2,5 +2,8 @@
 {% block title%}check connection{% endblock %}
 
 {% block content %}
-<span>{{bilgi}}</span>
+{% for table in tables %}
+                    <h2>{{titles[loop.index]}}</h2>                            
+                    {{ table|safe }}
+{% endfor %}
 {% endblock %}
