--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -28,6 +28,7 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
+                    <a class="nav-item nav-link" id="login" href="/logout">Logout</a>
                     <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
                     <a class="nav-item nav-link" id="checkconnection" href="/check-connection">Check Connection</a>
                     <a class="nav-item nav-link" id="home" href="/">home</a>
