--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,5 +2,6 @@
 {% block title%}Home{% endblock %}
 
 {% block content %}
-        <h1>This is the home page</h1>
+        <h1>{{user.email}}</h1>
+
 {% endblock %}
