--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,9 +30,12 @@
                     {% if user.is_authenticated %}
                     <a class="nav-item nav-link" id="home" href="/">home</a>
                     <a class="nav-item nav-link" id="login" href="/logout">Logout</a>
-                    {% else %}
-                    <a class="nav-item nav-link" id="login" href="/login">Login</a>
+                    {% if (user.email == 'mlgbaran@gmail.com') %}
                     <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+                    {% endif %}
+                    {% endif %}
+                    {% if user.is_authenticated == False %}
+                    <a class="nav-item nav-link" id="login" href="/login">Login</a>
                     <a class="nav-item nav-link" id="checkconnection" href="/check-connection">Check Connection</a>
                     {% endif %}
                 </div>
