--- a/website/templates/check_connection.html
+++ b/website/templates/check_connection.html
@@ -4,25 +4,10 @@
 {% block content %}
 
 
-<p>{{table}}</p>
-{% for user in users %}
-<table>
-    <thead>
-      <tr>
-          <th>vehicle ID</th>
-          <th>current timestamp</th>
-          <th>expiry timestamp</th>
-      </tr>
-      </thead>    
-      <tbody>
-       {% for row in data %}    
-              <tr>
-                  <td>{{row[0]}}</td>
-                  <td>{{row[1]}}</td>
-                  <td>{{row[2]}}</td>
-              </tr>
-          {% endfor %}
-      </tbody>
-  </table>
-{% endfor%}
+<select class="form-select" aria-label="Default select example">
+    <option selected>Open this select menu</option>
+    <option value="1">One</option>
+    <option value="2">Two</option>
+    <option value="3">Three</option>
+  </select>
 {% endblock %}
