--- a/website/templates/check_connection.html
+++ b/website/templates/check_connection.html
@@ -5,9 +5,8 @@
 
 
 <select class="form-select" aria-label="Default select example">
-    <option selected>Open this select menu</option>
-    <option value="1">One</option>
-    <option value="2">Two</option>
-    <option value="3">Three</option>
-  </select>
+{% for table in tableslist %}
+<option value="">table</option>
+{% endfor %}
+</select>
 {% endblock %}
