--- a/website/templates/check_connection.html
+++ b/website/templates/check_connection.html
@@ -22,11 +22,17 @@
 
 </div>
 
-<p>{{tablo}}</p>
+
 
 
 </form>
 
+{% if tabloismi != '' %}
+
+
+<p>{{basliklar}}</p>
+
+{% endif }
 
 
 {% endblock %}
