--- a/website/templates/check_connection.html
+++ b/website/templates/check_connection.html
@@ -5,12 +5,12 @@
 
 
 <form method="POST">
-<h3 align="center">Veritaban覺 tablo kontrol sayfas覺</h3>
+<h3 align="center">Veritabanı tablo kontrol sayfası</h3>
 
 
 <div class="form-group">
     <div class="input-group">
-<label for="tablo" class="col-sm-2 col-form-label" >Tablo se癟iniz</label>
+<label for="tablo" class="col-sm-2 col-form-label" >Tablo seçiniz</label>
 <select name="tablo" id="tablo" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
 {% for table in tablelist %}
 <option value="{{table[0]}}">{{table[0]}}</option>
@@ -18,12 +18,9 @@
 </select>
 
 </div>
-<button type="submit" class="btn btn-primary">G繹ster</button>
+<button type="submit" class="btn btn-primary">Göster</button>
 
 </div>
-
-
-
 
 </form>
 
@@ -31,22 +28,21 @@
 
 {% if tabloismi != '' %}
 
-<table class="table table-striped table-hover">
-    <thead>
+<table class="table table-striped table-hover table-sm">
+    <thead class="table-dark">
         <tr>
         {% for baslik in basliklar %}
 
             <th scope="col">{{baslik}}</th>
             
         {% endfor %}
-
         </tr>
     </thead>
     <tbody>
     {% for row in data %}
         <tr>
             {% for cell in row %}
-                <td>{{cell}}</td>
+                <td>{{cell}}{{loop.index}}</td>
             {% endfor %}
         </tr>
     {% endfor %}
