--- a/website/templates/veritabani_islemleri.html
+++ b/website/templates/veritabani_islemleri.html
@@ -27,7 +27,7 @@
 
 
 {% if tabloismi != '' %}
-
+<div class="table-responsive-sm">
 <table class="table table-striped table-hover table-sm">
     <thead class="table-dark">
         <tr>
@@ -42,13 +42,13 @@
     {% for row in data %}
         <tr>
             {% for cell in row %}
-                <td>{{cell}}{{loop.index}}</td>
+                <td>{{cell}}</td>
             {% endfor %}
         </tr>
     {% endfor %}
     </tbody>
 </table>
-
+</div>
 {% endif %}
 
 
