--- a/website/templates/veritabani_islemleri.html
+++ b/website/templates/veritabani_islemleri.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title%}check connection{% endblock %}
+{% block title%}veritabanı işlemleri{% endblock %}
 
 {% block content %}
 
