--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -31,6 +31,7 @@
                     <a class="nav-item nav-link" id="home" href="/">home</a>
                     <a class="nav-item nav-link" id="login" href="/logout">Logout</a>
                     {% if (user.email == 'mlgbaran@gmail.com') %}
+                    <a class="nav-item nav-link" id="upload_csv" href="/upload-csv">Fiyat Listesi Ekle</a>
                     <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
                     <a class="nav-item nav-link" id="veritabaniislemleri" href="/veritabani-islemleri">Veritabanı İşlemleri</a>
                     {% endif %}
