--- a/website/templates/upload_csv.html
+++ b/website/templates/upload_csv.html
@@ -14,6 +14,8 @@
                                 </div>
                 </div>
 
+                <button title="submit" class="btn btn-primary">Veritabanına Yükle</button>
+
         </form>
 
 {% endblock %}
